--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,11 @@ lto = "fat"
 
 [dependencies]
 chrono = "^0.4"
-csv = "^1.1"
+csv = "^1.1.0"
 dirs = "^3.0.1"
-filedb = {version="=0.1.0", git="https://github.com/rnleach/filedb.git", tag="v0.1.0"}
+filedb = {version="=0.1.1", git="https://github.com/rnleach/filedb.git", tag="v0.1.1"}
+nbm-tools = {version="=0.1.1", git="https://github.com/rnleach/nbm-tools.git", tag="v0.1.1"}
+optional = "^0.5.0"
 reqwest = {version = "^0.11.0", features=["blocking"]}
 rusqlite = "^0.24"
 
